--- a/BasicProject/HelloDjangoApp/templates/HelloDjangoApp/index.html
+++ b/BasicProject/HelloDjangoApp/templates/HelloDjangoApp/index.html
@@ -5,6 +5,13 @@
         <link rel="stylesheet" type="text/css" href="{% static 'site.css' %}" />
     </head>
     <body>
-        <span class="message">{{ message }}</span>{{ content }}
+     {% extends "HelloDjangoApp/layout.html" %}
+{% block content %}
+{{ content }}
+{% endblock %}
+
+        
+    <div><a href="about">About</a></div>
     </body>
 </html>
+
